# fastapi-to-do

./: README.md  main.py  pyproject.toml  setup.cfg
app/: models.py  mongodb.py  routes.py
tests/: conftest.py
tests/fixtures/: fixtures_mongodb.py  fixtures_routes.py
tests/unit_tests/: test_mongodb.py  test_routes.py
